removed more unused pictures, renamed stylesheets for cssgrid example

--- a/content/images/cssgrid.html
+++ b/content/images/cssgrid.html
@@ -12,8 +12,8 @@
       <p>  
       <ul>
         <li>CSS Grid Demo page:
-        <li><a onClick="set_css(0, cssLoaded, '#show_name');">ohne grid</a></li>
-        <li><a onClick="set_css(1, cssLoaded, '#show_name');">mit grid</a></li>
+        <li><a onClick="set_css('no', cssLoaded, '#show_name');">ohne grid</a></li>
+        <li><a onClick="set_css('grid', cssLoaded, '#show_name');">mit grid</a></li>
         <li>Verändere die Breite des Browsers-Fensters!</li>
       </ul>        
       </p>
@@ -27,14 +27,15 @@
       <ul>
         <li>Pieter Cornelis Mondriaan</li>
         <li>* 7. März 1872 in Amersfoort, NL</li>
-        <li> † 1. Februar 1944 in New York City, USA</li>
+        <li> † 1. Februar 1944 in New York City, US</li>
       </ul>
     </section>   
     <section class="navigation">
+      <h2>Quellen</h2>
       <ul>
         <li>Text <a href="https://de.wikipedia.org/wiki/Piet_Mondrian">deutsche Wikipedia</a></li>
         <li>Bild <a href="https://de.wikipedia.org/wiki/Piet_Mondrian#/media/File:Mondrian_Zelfportret.jpg">Wikicommons</a></li>
-        <li>Programmierung <a href="https://web-development.github.io/css-layout/layout/">Brigitte Jellinek</a></li>
+        <li>Code <a href="https://web-development.github.io/css-layout/layout/">Brigitte Jellinek</a></li>
       </ul>      
     </section>
     <section class="stylename" id="show_name"></section>
@@ -43,23 +44,23 @@
     <section class="rot"></section>
     <section class="gelb"></section>
 
-    <section class="w1">w1</section>
-    <section class="w2">w2</section>
-    <section class="w3">w3</section>
-    <section class="w4">w4</section>
-    <section class="w5">w5</section>
-    <section class="w6">w6</section>
-    <section class="w7">w7</section>
-    <section class="w8">w8</section>
-    <section class="w9">w9</section>
-    <section class="w10">w10</section>
-    <section class="w11">w11</section>
+    <section class="w1"></section>
+    <section class="w2"></section>
+    <section class="w3"></section>
+    <section class="w4"></section>
+    <section class="w5"></section>
+    <section class="w6"></section>
+    <section class="w7"></section>
+    <section class="w8"></section>
+    <section class="w9"></section>
+    <section class="w10"></section>
+    <section class="w11"></section>
 
   </div>
 
 
     <link rel="stylesheet" media="all" href="cssgrid_files/pure.css">
-    <link rel="stylesheet" media="all" id="grid_sheet" href="cssgrid_files/grid1.css">
+    <link rel="stylesheet" media="all" id="grid_sheet" href="cssgrid_files/grid.css">
     <script src="../assets/js/jquery.min.js"></script>
 
 <!--
