moved css grid demo to shorter url

--- a/content/images/cssgrid/dex.html
+++ b/content/images/cssgrid/dex.html
@@ -74,7 +74,7 @@
         console.log(`set_css(${style})`);
         set_css(style, cssLoaded, '#show_name');
       }
-      page.base('/images/cssgrid_files');
+      page.base('/images/cssgrid');
       page.redirect('/', '/responsive')
       page('*', handle)
       page({ hashbang:true })
