page.js working correctly for /images/cssgrid/

--- a/content/images/cssgrid/dex.html
+++ b/content/images/cssgrid/dex.html
@@ -76,7 +76,10 @@
       }
       page.base('/images/cssgrid');
       page.redirect('/', '/responsive')
-      page('*', handle)
+      page('/responsive', handle);
+      page('/no', handle);
+      page('/grid', handle);
+
       page({ hashbang:true })
 
 
