bilder in unterordner.  schlechtes beispiel absolut

--- a/content/images/css/text-css.html
+++ b/content/images/css/text-css.html
@@ -29,7 +29,16 @@
 <a href="/css/properties/#slide-1">Kapitel CSS Properties</a>.</header>
 
 <h1>Die große Überschrift ist eine h1</h1>
+<p>Ein Absatz Text als p</p>
 <h2>Die Untergordnete Überschrift ist eine h2</h2>
+
+<p>Ein Absatz Text als p. Wenns mehrere Absätze sind, dann
+  wird dazwischen ein Abstand gelassen.  Eine Leerzeile, sozusagen.
+  Beachten sie die Darstellung des Absatzes.</p>
+
+<p>Noch ein Absatz Text als p. Hier wurde mit Stylesheet nichts umgestellt.
+  Beachten sie die Darstellung des Absatzes.</p>
+
 
 
 <p>Und hier der CSS Code nochmal sichtbar gemacht:</p>
