--- a/content/images/navi/demo-2.html
+++ b/content/images/navi/demo-2.html
@@ -6,10 +6,10 @@
     .unsichtbar {display:none;}
     nav ul {
       padding-left: 0;
+      display:flex;
     }
 
     nav li {
-      float:left;
       list-style-type:none;
       margin-right: 1px;
     }
