--- a/content/images/navi/demo-2.html
+++ b/content/images/navi/demo-2.html
@@ -30,10 +30,10 @@
     <nav>
     <h3 class="unsichtbar">Seitenauswahl</h3>
     <ul>
-      <li><a href="navi-demo.html">home</a></li>
-      <li><a href="navi-demo-1.html">vertikal</a></li>
-      <li><a href="navi-demo-2.html">horizontal</a></li>
-      <li><a href="navi-demo-3.html">fancy</a></li>
+        <li><a href="demo.html">home</a></li>
+        <li><a href="demo-1.html">vertikal</a></li>
+        <li><a href="demo-2.html">horizontal</a></li>
+        <li><a href="demo-3.html">fancy</a></li>
     </ul>
     </nav>
   </body>
