code bei bild-hover anzeigen

--- a/content/images/css/hover-active.html
+++ b/content/images/css/hover-active.html
@@ -57,11 +57,28 @@ a:any-link { text-decoration: none; }
 
 <h2>Bei einem Bild</h2>
 
-<p>Warnhinweis: Auf Geräten ohne Mouse (z.B. Smartphones) ist
+<p>Warnhinweis: Auf Geräten ohne Maus (z.B. Smartphones) ist
   die 2. Version des Bildes nicht zugänglich!  Keine Maus, kein hover!</p>
 
 
 <div id="manhattan"></div>
+
+
+<pre>
+#manhattan {
+  width: 800px;
+  height: 188px;
+  background-image: url(manhattan.jpg);
+  background-size: cover;
+  background-position:  left top;
+}
+#manhattan:hover {
+  background-position: left 192px;
+}
+</pre>
+
+
+<p>Und hier nochmal <a href="manhattan.jpg">das ganze Bild</a>.</p>
 
 
 
