kapitel formulare/formulare erneuert, css grid layout, input type time

--- a/content/images/formulare/submitted.html
+++ b/content/images/formulare/submitted.html
@@ -9,6 +9,8 @@
 
     <p>Die URL dieser Webseite ist <kbd></kbd></p>
 
+    <h2>Analyse</h2>
+
   </body>
   <script src="/assets/js/jquery.min.js"></script>
   <script>
