--- a/content/images/responsive-images/dex.html
+++ b/content/images/responsive-images/dex.html
@@ -6,7 +6,7 @@
     <style>
       img { 
         width: 1353px; height: 461px;
-        clip-path: polygon(0% 0%, 10% 0%, 10% 100%, 0% 100%, 0% 0%);
+        /* clip-path: polygon(0% 0%, 10% 0%, 10% 100%, 0% 100%, 0% 0%); */
       }
     </style>
   </head>
