--- a/content/images/navi/demo.html
+++ b/content/images/navi/demo.html
@@ -7,12 +7,12 @@
     <h1>Demo: Navigation</h1>
     <p>Zurück zum <a href="/css-layout/navigation/">Kapitel Navigation</a></p>
     <nav>
-      <h3 class="unsichtbar">Seitenauswahl</h3>
       <ul>
         <li><a href="demo.html">home</a></li>
         <li><a href="demo-1.html">vertikal</a></li>
         <li><a href="demo-2.html">horizontal</a></li>
         <li><a href="demo-3.html">fancy</a></li>
+        <li><a href="demo-4.html">burger</a></li>
       </ul>
     </nav>
   </body>
