zoom und css pixel

--- a/content/images/responsive-images/dex.html
+++ b/content/images/responsive-images/dex.html
@@ -11,7 +11,8 @@
       .gallery {
         display:flex;
         justify-content: center;
-        flex-wrap: wrap;
+        align-items: flex-start;
+        flex-wrap: wrap;      
       }
     </style>
   </head>
@@ -21,7 +22,7 @@
     <li>japanischer-garten_1.jpg 350x350 Auflösung</li>
     <li>japanischer-garten_2x.jpg 701x701 Auflösung</li>
     <li>japanischer-garten_3x.jpg 1401x1401 Auflösung</li>
-    <li>japanischer-garten_4x.jpg 1401x1401 Auflösung</li>
+    <li>japanischer-garten_4x.jpg 2802x2802 Auflösung</li>
   </ul>
 
   <h2>der Code</h2>
