javascript-dom überarbeitet

--- a/content/images/javascript-dom/moreformjs.html
+++ b/content/images/javascript-dom/moreformjs.html
@@ -62,7 +62,7 @@
 <body onLoad="start()">
   <h1>Add more input elements to a form</h1>
 
-  <form method="post" action="/code/echo.php">
+  <form method="get" action="/images/formulare/submitted.html">
     <p>
     <label >Your Name
       <input type="text" name="name" id="name" /></label>
